# ChatCoachService

./: .env  .env.example  .gitignore  .gitmodules  CONTEXT_BUILDER_UPDATE.md  LANGUAGE_DEFAULT_UPDATE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_DAY1-3_COMPLETION.md  PHASE3_COMPLETION_REPORT.md  PHASE3_USAGE_GUIDE.md  PROMPT_MANAGEMENT_SETUP_COMPLETE.md  PROMPT_VERSION_COMPARISON_REPORT.md  PROMPT_VERSION_MANAGEMENT.md  README.md  SCENE_ANALYZER_UPDATE.md  SYSTEM_STATUS.md  TOKEN_OPTIMIZATION_ANALYSIS.md  analysis.md  analyze_trace.py  cache-todo.md  check_trace_version.py  config.example.yaml  config.yaml  install_core_libs.ps1  install_core_libs.sh  interface.md  main.py  models.yaml  print_env_vars.py  pyproject.toml  run_example.py  run_load_test.ps1  run_load_test.sh  soft-link-venv.ps1  start_server.ps1  start_server.sh  test_prompt_version.py  test_scene_analyzer.py  test_setup.py  test_token_optimization.py  (+1 more)
app/: __init__.py  main.py
config/: strategy_mappings.yaml
dev-docs/: ANALYZE_TRACE_FIX.md  CACHE_COORDINATE_NORMALIZATION_FIX.md  CACHE_FIX_DUPLICATE_ANALYSIS.md  CHANGELOG.md  CURRENT_STATUS.md  DOUBLE_COUNTING_FIX.md  ERROR_HANDLING_IMPROVEMENTS_SUMMARY.md  FAILED_JSON_LOGGING.md  GENERATION_JSON_PARSING_FIX.md  GENERATION_VS_MERGE_STEP_ANALYSIS.md  HOW_SERIAL_PARALLEL_WORKS.md  IMPLEMENTATION_CHECKLIST.md  INTIMACY_CHECK_CONFIG.md  INTIMACY_LLM_CHECK_USAGE_ANALYSIS.md  INTIMACY_PROMPT_OPTIMIZATION_SUMMARY.md  JSON_ESCAPE_FIX.md  JSON_PARSING_IMPROVEMENTS.md  LATENCY_ANALYSIS.md  LLM_CONFIG_CLARIFICATION.md  LLM_PROVIDER_UNIFIED_TO_DASHSCOPE.md  (+40 more)
(+341 files in other folders)
