[project]
name = "chatcoach"
version = "0.1.0"
description = "Conversation Generation Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "qdrant-client>=1.12.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "promptfoo>=0.1.2",
    "pyyaml>=6.0.3",
    "google-cloud-aiplatform>=1.136.0",
    "dashscope>=1.25.11",
    "pillow>=12.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
]
